# ragicamp

./: .coverage  .cursorrules  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CHEATSHEET.md  CLAUDE.md  CLEANUP_SUMMARY.md  CODE_QUALITY_REPORT.md  CONFIG_SYSTEM_BENEFITS.md  CONTRIBUTING.md  DOCS_INDEX.md  DOCUMENTATION.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS_IMPLEMENTED.md  Makefile  QUICK_REFERENCE.md  README.md  ROBUSTNESS_IMPROVEMENTS.md  ROBUSTNESS_SUMMARY.md  ROBUST_EVALUATION_UPDATE.md  SUMMARY.md  TESTING_SUMMARY.md  TODO.md  WHATS_NEW.md  download_backup.sh  pyproject.toml  pytest.ini  setup.sh  setup_env.sh.template
.github/: markdown-link-check.json
.github/workflows/: README.md  ci.yml  pr-check.yml  release.yml
conf/: config.yaml
conf/agent/: bandit_rag.yaml  direct_llm.yaml  fixed_rag.yaml
conf/dataset/: hotpotqa.yaml  nq.yaml  triviaqa.yaml
conf/evaluation/: evaluate.yaml  evaluate_only.yaml  full.yaml  generate.yaml  generate_only.yaml  quick.yaml  standard.yaml  study_100.yaml
conf/experiment/: baseline.yaml  baseline_study_direct.yaml  baseline_study_rag.yaml  comprehensive_direct.yaml  comprehensive_rag.yaml  model_comparison.yaml  quick_test.yaml  rag.yaml
conf/judge/: gpt4.yaml  gpt4_mini.yaml
conf/metrics/: baseline.yaml  fast.yaml  full.yaml  rag.yaml  rag_baseline.yaml  standard.yaml  study_core.yaml
conf/mlflow/: default.yaml  disabled.yaml
conf/model/: cpu.yaml  gemma_2b.yaml  gemma_2b_4bit.yaml  gemma_2b_8bit.yaml  llama3_8b.yaml  openai_gpt4.yaml  phi3.yaml
conf/prompt/: concise.yaml  explained.yaml  rag_concise.yaml  rag_extractive.yaml  rag_sentence.yaml  sentence.yaml
conf/prompts/: fewshot_examples.yaml
conf/retriever/: dense.yaml  dense_e5.yaml  dense_minilm.yaml  dense_mpnet.yaml  simple_e5_512.yaml  simple_e5_recursive_1024.yaml  simple_e5_recursive_512.yaml  simple_minilm_512.yaml  simple_minilm_recursive_1024.yaml  simple_minilm_recursive_512.yaml  simple_mpnet_512.yaml  simple_mpnet_recursive_1024.yaml  simple_mpnet_recursive_512.yaml  sparse.yaml  wiki_e5_recursive.yaml  wiki_minilm_recursive.yaml  wiki_minilm_sentence.yaml  wiki_mpnet_recursive.yaml  wiki_mpnet_sentence.yaml
conf/study/: baseline.yaml  comprehensive_baseline.yaml  full.yaml  rag_strategies_test.yaml  simple.yaml  simple_hf.yaml  smart_retrieval_slm.yaml  validation.yaml
docs/: AGENT_PERFORMANCE_ANALYSIS.md  ARCHITECTURE.md  ARCHITECTURE_REFACTORING.md  BACKLOG.md  CODE_IMPROVEMENTS_IMPLEMENTED.md  EXPERIMENT_CONFIGURATIONS.md  FUTURE_WORK.md  GETTING_STARTED.md  IMPROVEMENT_PLAN.md  OPTUNA_STUDY_DESIGN.md  PAPER_IDEAS.md  README.md  REFACTORING_SPEC.md  REFACTORING_TASKS.md  SOTA_GAPS.md  THESIS_STUDY.md  TROUBLESHOOTING.md  USAGE.md
docs/archives/: AGENTS.md  CODE_REVIEW_RECOMMENDATIONS.md  DOCS_INDEX.md  FAITHFULNESS_METRICS_SUMMARY.md  HYDRA_CONFIG.md  MLFLOW_RAGAS_GUIDE.md  NORMALIZATION_GUIDE.md  OUTPUT_STRUCTURE.md  QUICKSTART_V02.md  REFACTORING_SUMMARY.md  TROUBLESHOOTING_MATPLOTLIB.md  TWO_PHASE_EVALUATION.md  V02_RELEASE_NOTES.md  WHATS_NEW.md
docs/audit/: AUDIT_2026_02_09.md
docs/guides/: AGENTS.md  BATCH_PROCESSING.md  CHANGELOG_DATASETS.md  CHECKPOINT_RETRY_GUIDE.md  COMPREHENSIVE_BASELINE.md  CONFIG_BASED_EVALUATION.md  DATASET_MANAGEMENT.md  METRICS.md  MLFLOW_RAGAS_GUIDE.md  PATH_UTILITIES.md
examples/: README.md  dataset_download_example.py  path_utilities_example.py
experiments/: BASELINE_STUDY.md
experiments/configs/: bandit_rag.yaml  example_both.yaml  example_evaluate_only.yaml  example_generate_only.yaml  example_mlflow_ragas.yaml  mdp_rag.yaml  nq_baseline_gemma2b_cpu.yaml  nq_baseline_gemma2b_full.yaml  nq_baseline_gemma2b_full_batch.yaml  nq_baseline_gemma2b_quick.yaml  nq_baseline_gemma2b_quick_batch.yaml  nq_baseline_with_llm_judge.yaml  nq_baseline_with_llm_judge_mini.yaml  nq_baseline_with_llm_judge_ternary.yaml  nq_fixed_rag_gemma2b.yaml  nq_fixed_rag_phi3.yaml  nq_fixed_rag_wiki_simple.yaml  nq_fixed_rag_with_faithfulness.yaml
experiments/scripts/: compare_baselines.py  download_datasets.py  index_corpus.py  run_experiment.py
notebooks/: 01_data_overview.ipynb  02_rag_effectiveness.ipynb  03_component_analysis.ipynb  04_next_experiments.ipynb  05_failure_analysis.ipynb  06_pipeline_profiling.ipynb  ANALYSIS_SUMMARY.md  analysis_utils.py  comprehensive_analysis.ipynb  nb01_study_overview.ipynb  nb02_rag_vs_direct.ipynb  nb03_component_analysis.ipynb  nb04_agent_strategies.ipynb  nb05_model_scaling.ipynb  nb06_when_rag_fails.ipynb  nb07_error_analysis.ipynb  nb08_tpe_optimization.ipynb  nb09_efficiency.ipynb  nb10_statistical_tests.ipynb  nb11_retrieval_diagnostics.ipynb  rag_strategy_analysis.ipynb  smart_retrieval_analysis.ipynb
scripts/: analyze_retrieval.py  clean_study.py  compute_llm_judge.sh  compute_metrics.py  discover_results.sh  migrate_audit_fixes.py  migrate_fake_query_transform.py  migrate_fake_reranked.py  migrate_naming.py  migrate_to_new_format.py  quarantine_affected_exps.py  recover_embeddings.py  recover_embeddings_incremental.py  recover_embeddings_sharded.py  regenerate_comparison.py  repair_metadata.py  validate_cache.py  validate_config.py
tests/: README.md  __init__.py  conftest.py  shared_mocks.py  test_agents.py  test_analysis_utils.py  test_answer_in_context.py  test_backup.py  test_cache.py  test_checkpoint_manager.py  test_checkpointing.py  test_config.py  test_config_wiring.py  test_context_metrics_pipeline.py  test_context_recall.py  test_embedder_factory.py  test_embedding_storage.py  test_execution_phases.py  test_executor.py  test_experiment_io.py  test_experiment_state.py  test_factory.py  test_formatting.py  test_gpu_profile.py  test_hybrid_searcher.py  test_imports.py  test_index_builder.py  test_init_phase.py  test_iterative_rag.py  test_lazy_search_backend.py  test_loader.py  test_metrics.py  test_models.py  test_optuna_search.py  test_param_wiring.py  test_phase1_fixes.py  test_prompts.py  test_provider_refcount.py  test_repair_metadata.py  test_retrieval_cache.py  (+5 more)
(+198 files in other folders)
